Wed Mar 15 17:30:57 2000  Balachandran  <bala@cs.wustl.edu>

        * ACE version 5.1 released.

Wed Mar 15 15:17:19 2000  Charles Scott <Charles.P.Scott@jpl.nasa.gov>

        * include/makeinclude/platform_vxworks5.x_ghs.GNU: added
          --stdle --exceptions to CCFLAGS if exceptions are enabled.

Tue Mar 14 15:01:46 2000  Steve Huston  <shuston@riverace.com>

        * tests/Malloc_Test.cpp: Disable mapping the file into different
          address ranges for HP-UX because the PA-RISC architecture does not
          allow it. See the DEPENDENCIES section of the mmap man page for
          all the details.

Mon Mar 13 22:18:20 2000  David L. Levine  <levine@cs.wustl.edu>

        * bin/create_ace_build: default $directory_mode to 0777,
          because it gets modified by the umask anyways.  Thanks
          to Dave Meyer <dmeyer@std.saic.com> for suggesting this.

Mon Mar 13 10:16:53 2000  Bala  <bala@cs.wustl.edu>

        * ACE version 5.0.16 released.

Sun Mar 12 21:10:13 2000  David L. Levine  <levine@cs.wustl.edu>

        * many Makefiles: updated dependencies.

Fri Mar 10 00:17:37 2000  Douglas C. Schmidt  <schmidt@tango.cs.wustl.edu>

        * netsvcs/ACE-netsvcs.html: Updated this document.  Thanks to
          Charles Meier <cmeier@concentus-tech.com> for contributing this.

        * ace/WIN32_Proactor.cpp (ACE_WIN32_Proactor): Replaced
          this->completion_port_ with 0 in the call to
          CreateIoCompletionPort() to make it more clear what's going on.

        * ace/SPIPE_Acceptor.cpp: Very minor reformatting of the code to
          conform to ACE guidelines.

Thu Mar 09 23:12:39 2000  Nanbor Wang  <nanbor@cs.wustl.edu>

        * ace/OS.i (flock_init): On Win32, the hEvent in strut overlapped
          should initialized to NULL.  This was causing Naming_Test to
          fail on Windows 2000.  Thanks to <cody.dean@mindspring.com> for
          pointing this out. [Bug 485]
