@@ -1,3 +1,9 @@
+Wed Mar 15 20:43:14 2000  David L. Levine  <levine@cs.wustl.edu>
+
+        * ace/OS.cpp (thr_keycreate): rearranged ::pthread_keycreate ()
+          calls so that ACE_HAS_STDARG_THR_DEST is only used with
+          ACE_HAS_PTHREADS_DRAFT4.
+
 Wed Mar 15 17:30:57 2000  Balachandran  <bala@cs.wustl.edu>
 
         * ACE version 5.1 released.
